Index HTML, master styling, plus images for page

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,144 @@
+/*******************
+   BACKGROUND IMAGE
+*********************/
+ 
 html {
-  background-color: lightsteelblue;
+  background: url(images/bg.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
-
-article {
-  background-color: darkblue;
-  border-radius: 10px
-  border: 3px groove lightseagreen;
-  display: inline-block;
-  width: 30%;
+ 
+/***************
+   SITE BANNER
+****************/
+ 
+/* Banner: Wrapper/Background */
+ 
+.banner {
+  background-color: white;
+  display: block;
   margin: 0 auto;
+  border: 10px solid black;
+  text-align: center;
+  -webkit-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  -moz-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+}
+ 
+/* Title Text */
+.cyw {
+  font-family: "Brush Script MT", cursive;
+  font-size: 6em;
+  color: black;
+  background: url(images/bg.jpg) no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+ 
+/***********
+   NAV BAR
+************/
+ 
+nav {
+  text-align: center;
+ 
+}
+ 
+.navbar {
+  display: inline-block;
+  margin-top: 3em;
+}
+ 
+a {
+  background-color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+  text-decoration: none;
+  margin-right: 1em;
+  padding: 1em;
   color: white;
-  font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+  font-size: 2em;
+  border: 5px solid white;
+  border-radius: 20px;
+  border-top-right-radius: 150px;
+  border-bottom-left-radius: 150px;
+  -webkit-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  -moz-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+}
+ 
+a:hover {
+  color: #FB2303;
+  font-family: "Brush Script MT", cursive;
+  font-size: 2.5em;
+  border: 5px dotted #FF0276;
+  border-right: 5px dotted #FF0276;
+  border-bottom: 5px dotted #49E522;
+  border-left: 5px dotted #49E522;
+  border-radius: 50%;
+}
+ 
+/****************
+   BODY CONTENT
+*****************/
+ 
+article.body {
+  background-color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+  color: black;
+  font-size: 1.5em;
+  border: 10px solid black;
+  margin: 1.5em auto;
+  display: block;
+  width: 80%;
+  padding: 0 2em 1em 2em;
+  -webkit-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  -moz-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+}
+ 
+.body h1 {
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+  color: #FB2303;
+  font-weight: bolder;
+  font-size: 3em;
+  background: url(images/bg.jpg) no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+ 
+.body p {
+  text-indent: 2em;
+}
+ 
+/**********************
+   BODY IMAGES: INDEX
+***********************/
+
+.index_img_wrapper {
+  text-align: center;
+} 
+
+.index_img {
+  height: 200px;
+  border: 1px solid black;
+  margin-right: 1em;
+  -webkit-box-shadow: 10px 10px 10px -1px rgba(255,2,118,0.58);
+  -moz-box-shadow: 10px 10px 10px -1px rgba(255,2,118,0.58);
+  box-shadow: 10px 10px 10px -1px rgba(255,2,118,0.58);
+}
+ 
+/**********
+   FOOTER
+***********/
+ 
+footer {
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+  color: white;
+  background: black;
+  font-size: 1em;
+  padding: .5em;
+  -webkit-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  -moz-box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
+  box-shadow: 10px 10px 10px -1px rgba(0,0,0,0.5);
 }
